<resources>
    <string name="app_name">practice102</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="welcome">Welcome to Beta101!</string>
    <string name="signInUpMessage">In order to Login, click on Sign in or Sign up button!</string>
    <string name="resetPassword">Forgotten Password?</string>
    <string name="newPassword">New Password</string>
    <string name="confirm">Confirm</string>
    <string name="submit">Submit</string>
</resources>