<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="252dp"
        android:layout_marginTop="628dp"
        android:layout_marginBottom="55dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/signUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signinButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="628dp"
        android:layout_marginBottom="55dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/signIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/mainFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        android:background="@color/teal_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:layout_marginVertical="200dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/purple_200"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/signInUpTextView"
            android:layout_width="382dp"
            android:layout_height="92dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="300dp"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/signInUpMessage"
            android:textSize="28dp" />

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>